fixed home bottom margin so as not to be cut off by footer

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,6 +3,10 @@ html {
     height: 100%;
 }
 
+.home {
+    margin-bottom: 100px;
+}
+
 .bg {
     background-image: url("../../Images/cover_page.jpeg");
     height: 90vh;
